crates/rolldown/tests/rolldown/errors/preserve_modules_dot_dot_name/main.js
import y from './..y.js';

console.log(y);
